apps/mermaid-live-editor/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mermaid-live-editor
spec:
  type: ClusterIP
  selector:
    app: mermaid-live-editor
  ports:
    - name: web
      port: 80
      targetPort: 8080
      protocol: TCP
