apps/mermaid-live-editor/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mermaid-live-editor
  namespace: mermaid-live-editor
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - mermaid.biplane.v6.rocks
    - mermaid.biplane.casa
  rules:
    - backendRefs:
        - name: mermaid-live-editor
          port: 80
